# MiniRysV4LineFollower2

./: .gitignore  CMakeLists.txt  README.md  TODO.md  package.xml
RobotLineFollower/: .gitignore  TODO.md
RobotLineFollower/robot/: README.md  build_libs.sh
RobotLineFollower/robot/libs/camera/: CMakeLists.txt
RobotLineFollower/robot/libs/camera/include/: ContourFinding.h
RobotLineFollower/robot/libs/camera/src/: CenterFinding.cpp
RobotLineFollower/robot/libs/data_saver/: CMakeLists.txt
RobotLineFollower/robot/libs/data_saver/src/: DataSaver.cpp
RobotLineFollower/robot/libs/motors/: CMakeLists.txt
RobotLineFollower/robot/libs/motors/include/: LSM6DS3.h  filter.h
RobotLineFollower/robot/libs/motors/src/: VL53L1X.cpp  filter.cpp  gpio.cpp  l6470commands.cpp  l6470config.cpp  l6470dump.cpp  motors.cpp  tmp102.cpp
RobotLineFollower/robot/libs/pid/: CMakeLists.txt
RobotLineFollower/robot/libs/pid/include/: Pid.h
RobotLineFollower/robot/libs/pid/src/: Pid.cpp
RobotLineFollower/robot/libs/udp_comm/: CMakeLists.txt
RobotLineFollower/robot/main_server/: CMakeLists.txt
RobotLineFollower/robot/main_server/src/: main_server.cpp.save
RobotLineFollower/user/: CMakeLists.txt  README.md
RobotLineFollower/user/src/: client.cpp
launch/: data_pub_example.launch.py  robot_line_follower.launch.py  rys_line_follower.launch.py
lib/bcm2835/: bcm2835.c
lib/bcm2835/include/: bcm2835.h
lib/camera/: CenterFinding.h  ContourFinding.cpp  ContourFinding.h
lib/camera/include/: CenterFinding.h
lib/controller/: Controller.cpp  Controller.h
lib/data_publisher/: DataPublisher.cpp  DataPublisher.h
lib/data_saver/: DataSaver.cpp  DataSaver.h
lib/data_saver/include/: DataSaver.h
lib/detector/: Detector.cpp  Detector.h
lib/imu/: LSM6DS3.cpp  LSM6DS3.h  filter.cpp
lib/imu/src/: LSM6DS3.cpp
lib/motors/: l6470commands.cpp  l6470support.cpp  motors.cpp  motors.h
lib/motors/include/: motors.h
lib/motors/src/: l6470.cpp  l6470support.cpp
lib/pid/: Pid.cpp  Pid.h
lib/temperature/include/: gpio.h  tmp102.h
lib/tmp/: .tmp_node.py.swp  tmp102.py  tmp_node.py
lib/tof/: VL53L1X.cpp
lib/tof/include/: VL53L1X.h
lib/udp_comm/: UdpJpgFrameStreamer.h
lib/udp_comm/src/: UdpJpgFrameStreamer.cpp
msg/: ProcessData.msg
src/: client.cpp  data_pub_example.cpp  main.cpp  yuv.cpp
yaml/: data_node_params.yaml  tmp_node_params.yaml
